--- a/debian/control
+++ b/debian/control
@@ -1,15 +1,14 @@
 Source: teams-guest-login
-Section: unknown
+Section: contrib/net
 Priority: optional
 Maintainer: Christoph Lutz <chrlutz@gmail.com>
 Build-Depends: debhelper-compat (= 12)
 Standards-Version: 4.4.1
-Homepage: <insert the upstream URL, if relevant>
-#Vcs-Browser: https://salsa.debian.org/debian/teams-guest-login
-#Vcs-Git: https://salsa.debian.org/debian/teams-guest-login.git
+Homepage: https://github.com/chrlutz
 
 Package: teams-guest-login
 Architecture: all
 Depends: ${misc:Depends}
-Description: <insert up to 60 chars description>
- <insert long description, indented with spaces>
+Description: Teams Guest Login via incognito browser
+ Adds a .desktop-file and a tiny wrapper script to open 'msteams:'
+ links in an incognito browser.
